# fresa

./: 404.html  CHANGELOG.md  README.md  config.h  dtypes.h  game.cpp  index.html  log.h  mkdocs.yml  versions.json  vulkan.md
0.1/: 404.html  index.html
0.4/: 404.html  index.html  sitemap.xml
0.5/: 404.html  index.html  sitemap.xml
audio/: audio-basic.cpp  audio.h
core/: config.h  dtypes.cpp  dtypes.h  ecs.h  engine.cpp  engine.h  events.h  f_math.cpp  f_math.h  f_time.cpp  f_time.h  file.h  fmath.cpp  fmath.h  fresa_config.h  fresa_time.h  ftime.cpp  ftime.h  game.cpp  game.h  jobs.h  log.cpp  log.h  noise.cpp  noise.h  system.h  time.cpp  time.h
docs/: README.md  _sidebar.md  coroutines.h  design.md  features.md  index.html  index.md  language.md  style.md
ecs/: cpool.cpp  cpool.h  ecs.cpp  ecs.h  polymap.h  scene.cpp  scene.h
events/: events.cpp  events.h  input.cpp  input.h  state_machine.h  state_table.h
graphics/: graphics_api.h  graphics_vk.cpp  r_api.cpp  r_api.h  r_api_vk.cpp  r_api_vulkan.cpp  r_api_vulkan.h  r_attachments.h  r_buffers.cpp  r_buffers.h  r_camera.cpp  r_camera.h  r_common_api.cpp  r_common_api.h  r_draw.cpp  r_draw.h  r_dtypes.h  r_graphics.cpp  r_graphics.h  r_next_renderer.cpp  r_next_renderer.h  r_opengl.h  r_palette.cpp  r_palette.h  r_pipeline.cpp  r_pipeline.h  r_render_graph.cpp  r_render_graph.h  r_renderer.cpp  r_renderer.h  r_renderer_gl.cpp  r_renderer_vk.cpp  r_shader.cpp  r_shader.h  r_shader_common.cpp  r_shaders.cpp  r_shaders.h  r_textures.cpp  r_textures.h  r_types.h  (+8 more)
gui/: entity_gui.cpp  gui.cpp  gui.h  (+10 more)
reflection/plugin/: CMakeLists.txt  FindLLVM.cmake  reflection_plugin.cpp
(+259 files in other folders)
